--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 <title>EarnYou — Learn & Earn Smarter</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/jpg" href="unnamed.jpg">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8MFM0GF7FY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8MFM0GF7FY');
+</script>
 </head>
 <body>
   <header class="navbar container" role="banner">
