--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Contact — EarnYou</title><link rel="stylesheet" href="style.css"></head>
+<title>Contact — EarnYou</title><link rel="stylesheet" href="style.css"><!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8MFM0GF7FY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8MFM0GF7FY');
+</script></head>
 <body>
   <header class="navbar container">
     <a class="brand" href="index.html"><div class="logo">EY</div><h1>EarnYou</h1></a>
