--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       <p class="meta">We'd love to hear from you</p>
       <p>For collaborations, feedback or support, email us at <a href="mailto:hello@earnyou.example">hello@earnyou.example</a></p>
       <h3>Message</h3>
-      <form onsubmit="event.preventDefault(); alert('Thanks — message simulated (no backend).');">
+      <form onsubmit="event.preventDefault(); alert('Thanks.');" netlify>
         <input placeholder="Your name" style="width:100%;padding:12px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);margin-bottom:10px;background:transparent;color:inherit">
         <input placeholder="Your email" style="width:100%;padding:12px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);margin-bottom:10px;background:transparent;color:inherit">
         <textarea placeholder="Your message" style="width:100%;padding:12px;border-radius:8px;border:1px solid rgba(255,255,255,0.04);margin-bottom:10px;background:transparent;color:inherit;height:120px"></textarea>
