--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
 <title>EarnYou — Learn & Earn Smarter</title>
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/jpg" href="unnamed.jpg">
+  <!-- ✅ SEO Meta Tags for EarnYou Homepage -->
+<meta name="description" content="EarnYou — your ultimate platform to explore tips, ideas, and guides on how to earn money online. Discover apps, tricks, and daily earning opportunities in one place.">
+<meta name="keywords" content="EarnYou, earn money online, online income, money making apps, daily rewards, best earning platforms, how to earn online, passive income, work from home, finance blog">
+<meta name="author" content="EarnYou Team">
+<meta name="robots" content="index, follow">
+<meta name="language" content="English">
+<meta name="revisit-after" content="7 days">
+
+<!-- ✅ Open Graph (for Facebook, WhatsApp, etc.) -->
+<meta property="og:title" content="EarnYou — Learn How to Earn Money Online">
+<meta property="og:description" content="Find the latest and most trusted ways to earn money online. Start your digital earning journey with EarnYou.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://yourwebsite.com/">
+<meta property="og:image" content="https://yourwebsite.com/assets/earnyou-preview.png">
+
+<!-- ✅ Twitter Card (for Twitter/X sharing) -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="EarnYou — Learn How to Earn Money Online">
+<meta name="twitter:description" content="Explore daily earning tips, apps, and online income guides with EarnYou.">
+<meta name="twitter:image" content="https://yourwebsite.com/assets/earnyou-preview.png">
+
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8MFM0GF7FY"></script>
 <script>
