--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p>© 2025 EarnYou — Designed with care.</p>
+      <p>© 2025 EarnYou – Smart Way to Earn Money Online</p>
     </div>
   </footer>
 
