--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,6 @@
     </div>
   </main>
 
-  <footer class="footer"><div class="container"><p>© 2025 EarnYou</p></div></footer>
+  <footer class="footer"><div class="container"><p>© 2025 EarnYou – Smart Way to Earn Money Online</p></div></footer>
 </body>
 </html>
