Add article section for AI Earning Tools 2025

--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
           <p>Students के लिए Best Online Earning Methods 2025.</p>
         </div>
       </article>
+      <article class="card" onclick="location.href='posts/post8.html'">
+        <img src="https://miro.medium.com/0*h16Ole269ODASMHd" alt="AI Earning Tools 2025 – Best Ways to Make Money Using Artificial Intelligence">
+        <div class="body">
+          <h3>AI Earning Tools 2025 – Best Ways to Make Money Using Artificial Intelligence</h3>
+          <p>Students के लिए Best Online Earning Methods 2025.</p>
+        </div>
+      </article>
     </div>
 
   </main>
