--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <section class="hero">
       <div class="hero-left">
         <h2>Learn practical ways to earn — the smart & modern way</h2>
-        <p>EarnYou curates the best tools, apps, and guides to help you start earning online with minimal friction.</p>
+       <h2>What is <b>EarnYou</b></h2>
+          <p>EarnYou is your one-stop platform to learn the best earning tips, online money-making tricks, passive income ideas, and simple methods to earn money from home. We share daily guides on micro-tasks, refer & earn apps, freelancing, blogging, and real earning opportunities that actually work in India. Whether you are a student, beginner, or someone looking for fast online income, EarnYou provides trusted, updated, and easy strategies to help you grow your earnings instantly.</p>
+       
         <p style="margin-top:14px"><a class="cta" href="#posts">Explore posts</a></p>
       </div>
       <div style="width:320px">
