--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="navbar container" role="banner">
     <a class="brand" href="index.html">
-      <div class="logo"><img style="border-radius: 5px;" width="50px" src="unnamed.jpg"></img></div>
+      <div class="logo"><img style="border-radius: 5px;" width="50px" src="unnamed.jpg" alt="logo"></img></div>
       <h1>EarnYou</h1>
     </a>
 
