--- a/index.html
+++ b/index.html
@@ -4,6 +4,51 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>EarnYou — Learn & Earn Smarter</title>
+  <meta name="keywords" content="
+earn money online 2025,
+online earning methods india,
+free earning ideas,
+how to earn money from mobile,
+best ways to earn online,
+online jobs without investment,
+daily income ideas,
+trusted earning websites india,
+beginner friendly earning guide,
+passive income ideas 2025,
+students earning ideas,
+micro task earning websites,
+best money making apps india,
+online earning without investment,
+earn you earning guide,
+work from home jobs india,
+side hustles india 2025,
+quick ways to earn online,
+make money online for beginners,
+latest earning trends 2025
+">
+<meta name="keywords" content="
+earn you online earning website,
+best online earning guides india,
+earn money online 2025,
+top earning tools and apps,
+ai earning methods india,
+zero investment earning ideas,
+mobile se paise kaise kamaye,
+students earning tips india,
+freelancing and micro jobs india,
+daily payout earning apps,
+real earning websites india,
+trusted online income sources,
+side hustles for beginners india,
+online business ideas 2025,
+passive income streams india,
+fastest ways to earn online,
+genuine earning ideas,
+work from home earning methods,
+earning tutorials and guides,
+earn you official earning blog
+">
+
   <meta name="description" content="EarnYou – Best platform for online earning tips, tricks, micro-tasks, refer & earn apps, and daily income ideas for students and beginners in India.">
 <meta name="keywords" content="online earning tips,earning tricks for students,earn money online India,passive income ideas 2025,micro task websites India,refer and earn apps 2025,best money earning apps,how to earn money without investment,daily income tricks,make money online guide,
   how to earn money from home,earning apps without investment,instant withdrawal earning apps
