--- a/index.html
+++ b/index.html
@@ -240,6 +240,18 @@ earn you official earning blog
           <p>Students के लिए Top 10 Evergreen Blog Niches for 2025 – EarnYou. Best Online Earning Methods 2025.Top 10 Evergreen Blog Niches for 2025 – Earn Money Completing Simple Tasks.</p>
         </div>
       </article>
+    <article class="card" onclick="location.href='posts/post22.html'">
+        <img src="https://media.licdn.com/dms/image/v2/C4E0BAQHLEElilbrxJg/company-logo_200_200/company-logo_200_200/0/1660162074720/aero_ai_logo?e=2147483647&v=beta&t=XEiX5eN53Yugry67dAKKU0ZOWqe9dYyRvOs9-zhpQMA" alt="AeroAI – The New Viral AI Tool of 2025 | Full Review, Features & Guide">
+          <h3>AeroAI – The New Viral AI Tool of 2025 | Full Review, Features & Guide</h3>
+          <p>Students के लिए new earning app AeroAI – The New Viral AI Tool of 2025 | Full Review, Features & Guide – EarnYou. Best Online Earning Methods 2025.Top 10 Evergreen Blog Niches for 2025 – Earn Money Completing Simple Tasks.</p>
+        </div>
+      </article>
+    <article class="card" onclick="location.href='posts/post23.html'">
+        <img src="https://images.ctfassets.net/lzny33ho1g45/YfmILonnkEx33N7mxSRfF/681531e61c93417c5b765cd46867bdf1/best-ai-voice-generator.jpg" alt="Top Emerging AI Tools & Apps in 2025">
+          <h3>Top Emerging AI Tools & Apps in 2025 - EarnYou</h3>
+          <p>Students के लिएTop Emerging AI Tools & Apps in 2025 – EarnYou. Best Online Earning Methods 2025.Top Emerging AI Tools & Apps in 2025 – Earn Money Completing Simple Tasks.</p>
+        </div>
+      </article>
     </div>
 
   </main>
