--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+  <meta name="ppck-ver" content="9c707dc0391cc353905a13b3beb4889c" />
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>EarnYou — Learn & Earn Smarter</title>
   <meta name="keywords" content="
